If 'nginx' load balancing is configured, both, nginx and keepalived will now run as static pods on the master nodes. Note that with some clusters the nginx/keepalived setup (regardless of this commit) currently joining the first secondary master node always fails while all subsequent masters can be joined just fine. A fix to this is expected with Kubernetes 1.18.0, see also https://github.com/kubernetes/kubernetes/pull/85763

--- a/ansible/cluster-setup.yaml
+++ b/ansible/cluster-setup.yaml
@@ -75,7 +75,7 @@
   - masters
   - secondary-masters
 
-- name: Set up secondary masters
+- name: Make some adjustments for HA
   hosts: masters
   remote_user: root
   gather_facts: yes
