--- a/ansible/group_vars/md_kubernetes.yaml
+++ b/ansible/group_vars/md_kubernetes.yaml
@@ -12,4 +12,5 @@ NETWORK_PLUGIN: weavenet
 NTP_SERVER: 172.16.8.250
 #NFS_SHARE: /var/nfsshare
 #NFS_MOUNT: /var/kubernetes
-#SETUP_DOCKER: true
+SETUP_DOCKER: true
+LOAD_BALANCING: "nginx"
