--- a/ansible/group_vars/all.yaml
+++ b/ansible/group_vars/all.yaml
@@ -55,14 +55,14 @@ CERT_ORG_UNIT: "Deployment"
 # Software versions (used by installation via package manager)
 KUBERNETES_VERSION: "1.17.3"
 KUBERNETES_CNI_VERSION: "0.7.5"
-KEEPALIVED_VERSION: "1.3.5"
 
 # Tags for some images
 KUBE_VIP_TAG: "0.1.1"
 COREDNS_TAG: "1.6.5"
 PAUSE_TAG: "3.1"
+KEEPALIVED_TAG: "1.3.5-1"
+NGINX_TAG: "1.16.1"
 ETCD_TAG: "3.4.3"
-NGINX_VERSION: "1.16.1"
 ETCD_OPERATOR_TAG: "v0.9.4"
 CONFIGMAP_RELOAD_TAG: "v0.0.1"
 PROMETHEUS_OPERATOR_TAG: "v0.37.0"
@@ -93,6 +93,8 @@ DOCKER_IMAGES: [
   { name: "k8s.gcr.io/kube-proxy-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
   { name: "k8s.gcr.io/kube-scheduler-{{ HOST_ARCH }}", tag: "v{{ KUBERNETES_VERSION }}" },
   { name: "k8s.gcr.io/pause-{{ HOST_ARCH }}", tag: "{{ PAUSE_TAG }}" },
+  { name: "osixia/keepalived", tag: "{{ KEEPALIVED_TAG }}" },
+  { name: "nginx", tag: "{{ NGINX_TAG }}" },
   { name: "kubernetesui/metrics-scraper-{{ HOST_ARCH }}", tag: "{{ METRICS_SCRAPER_TAG }}" },
   { name: "kubernetesui/dashboard-{{ HOST_ARCH }}", tag: "{{ DASHBOARD_TAG }}" },
   { name: "plndr/kube-vip", tag: "{{ KUBE_VIP_TAG }}" },
