--- a/ansible/group_vars/my_cluster.yaml
+++ b/ansible/group_vars/my_cluster.yaml
@@ -6,4 +6,5 @@
 CLUSTER_NAME: md-kubernetes
 #NETWORK_PLUGIN: flannel
 NETWORK_PLUGIN: weavenet
-LOAD_BALANCING: "nginx"
+LOAD_BALANCING: "haproxy"
+VIP_MANAGER: "keepalived"
